--- a/css-components/www/styles/components.less
+++ b/css-components/www/styles/components.less
@@ -26,7 +26,7 @@ div#components-container {
         cursor: pointer;
       }
 
-      input[type=checkbox] {
+      h3 > label > input[type=checkbox] {
         border: 1px solid #555;
         border-radius: 2px;
         -webkit-appearance: none;
